Fixed dark mode icons having a choppy white border

--- a/ruqqus/assets/style/main_dark.css
+++ b/ruqqus/assets/style/main_dark.css
@@ -15069,7 +15069,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
   text-align: center;
   object-fit: cover;
   color: #FFFFFF;
-  background-color: #FFFFFF;
 }
 
 .profile-pic .letter {
@@ -15109,7 +15108,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
   border-radius: 50%;
   text-align: center;
   object-fit: cover;
-  background-color: #FFFFFF;
 }
 
 .profile-pic-25 {
@@ -15118,7 +15116,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
   border-radius: 50%;
   text-align: center;
   object-fit: cover;
-  background-color: #FFFFFF;
 }
 
 .profile-pic-30 {
@@ -15127,7 +15124,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
   border-radius: 50%;
   text-align: center;
   object-fit: cover;
-  background-color: #FFFFFF;
 }
 
 .profile-pic-35 {
@@ -15136,7 +15132,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
   border-radius: 50%;
   text-align: center;
   object-fit: cover;
-  background-color: #FFFFFF;
 }
 
 .profile-pic-40 {
@@ -15145,7 +15140,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
   border-radius: 50%;
   text-align: center;
   object-fit: cover;
-  background-color: #FFFFFF;
 }
 
 .profile-pic-50 {
@@ -15154,7 +15148,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
   border-radius: 50%;
   text-align: center;
   object-fit: cover;
-  background-color: #FFFFFF;
 }
 
 .profile-pic-65 {
@@ -15163,7 +15156,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
   border-radius: 50%;
   text-align: center;
   object-fit: cover;
-  background-color: #FFFFFF;
 }
 
 .profile-pic-75 {
@@ -15172,7 +15164,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
   border-radius: 50%;
   text-align: center;
   object-fit: cover;
-  background-color: #FFFFFF;
 }
 
 .profile-pic-100 {
@@ -15181,7 +15172,6 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
   border-radius: 50%;
   text-align: center;
   object-fit: cover;
-  background-color: #FFFFFF;
 }
 
 .profile-pic-overlap {
